line issue still working

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #3fed36; }
+  background: #6ae3e3; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #2d8446; }
+  background: #232582; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9e1ecd; }
+  background: #d375a9; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #14d127; }
+  background: #eb8c01; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #895784; }
+  background: #7d4fbb; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #4421c4; }
+  background: #d896a6; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #1fdbeb; }
+  background: #6b9df8; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #608523; }
+  background: #3f5e35; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #2710e5; }
+  background: #b61fc7; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #2cac39; }
+  background: #e1071a; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d9b0bf; }
+  background: #8b1736; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #848961; }
+  background: #495ac7; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #620961; }
+  background: #9e5bef; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #6c27c2; }
+  background: #e05c68; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #6f4fc4; }
+  background: #99c838; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #eb7966; }
+  background: #c8540e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #a71757; }
+  background: #a5e072; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #2128dd; }
+  background: #ae070e; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #6adff8; }
+  background: #46d391; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #555bb0; }
+  background: #ba869b; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #272ce2; }
+  background: #0bfbe5; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #489ccf; }
+  background: #6595ab; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #580e1a; }
+  background: #3874d6; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #63c0b3; }
+  background: #b64788; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #42fdb8; }
+  background: #7e171f; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e3be67; }
+  background: #7812b3; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #107c6c; }
+  background: #1fc893; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #61b7cb; }
+  background: #f80d60; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #7e8987; }
+  background: #d368c1; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #7a979c; }
+  background: #ca1cbf; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e2963c; }
+  background: #082ff1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #80ff0e; }
+  background: #ad130d; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #af2f7d; }
+  background: #d9b722; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #4d6cd7; }
+  background: #16179b; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #cbc103; }
+  background: #705775; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d6922a; }
+  background: #4c331c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #6b2903; }
+  background: #ce5b81; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #efeac7; }
+  background: #039c2b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #6dd7c3; }
+  background: #9bead1; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #2cdfc3; }
+  background: #ba3661; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #839769; }
+  background: #04cd06; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e9bd95; }
+  background: #dd8436; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #80222e; }
+  background: #6ca817; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #03b4f5; }
+  background: #0ce4c3; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #e0a5d1; }
+  background: #323fb9; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6cddb7; }
+  background: #5b4bf3; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #aed74b; }
+  background: #d99b99; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #58105a; }
+  background: #ae9f28; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #cda98f; }
+  background: #a98bdd; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #5c7756; }
+  background: #37d273; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #9db8c8; }
+  background: #cc78f2; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #ad3524; }
+  background: #c07142; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #22a2f4; }
+  background: #c9bce9; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #116248; }
+  background: #7dfc0d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #22d95d; }
+  background: #50a885; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #27598d; }
+  background: #6ae7f4; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a138ec; }
+  background: #aa808a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #b0f74a; }
+  background: #ed3d21; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #bc67fc; }
+  background: #9c4b55; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #1ac0b9; }
+  background: #11755f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #cc93ae; }
+  background: #1dae6b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #61abc8; }
+  background: #158624; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #bc318d; }
+  background: #f37f84; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #ffd90a; }
+  background: #dc6959; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #1d7af8; }
+  background: #2a0f99; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #ee8c25; }
+  background: #97488c; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f487b1; }
+  background: #860c47; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #942bf2; }
+  background: #ec7c54; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #ed343c; }
+  background: #03067f; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #8fb78f; }
+  background: #cd2b4f; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #9a1f9f; }
+  background: #6b5467; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b12869; }
+  background: #b3a371; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #408462; }
+  background: #387ab7; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ed7e61; }
+  background: #bb4b31; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #5c106e; }
+  background: #d26c39; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #6fef5e; }
+  background: #f7e64c; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #bdbe53; }
+  background: #48b17e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #9bfb5a; }
+  background: #3ed41c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #faa41f; }
+  background: #0bc62f; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #d642a9; }
+  background: #404409; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #12c135; }
+  background: #bd66bb; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #ff1fac; }
+  background: #060bac; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #e7c2a3; }
+  background: #14bcd7; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #522f53; }
+  background: #2c1d24; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #32ec9f; }
+  background: #9059a1; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #fca00e; }
+  background: #92f83a; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #1ba425; }
+  background: #b0e847; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #67aac7; }
+  background: #8b74c7; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ecdec1; }
+  background: #f0878d; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #56c185; }
+  background: #c19e91; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #7906c7; }
+  background: #878681; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #848075; }
+  background: #061777; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #450c53; }
+  background: #e79633; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #cc7f28; }
+  background: #74557a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #e9565d; }
+  background: #58a8ad; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #f6e4c8; }
+  background: #fa5083; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #92a95e; }
+  background: #3e5ae5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #29d550; }
+  background: #c09703; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #91a640; }
+  background: #6b7ff8; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #da7fa3; }
+  background: #9142ca; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11494,6 +11494,15 @@ input:checked + .sliders:before {
     display: flex !important;
     justify-content: space-between !important;
     align-items: center !important; }
+    .query-wizard-exp-contents .query-wizard-expension .fields-wrappter::before {
+      content: "";
+      border-top: 2px solid #776fff;
+      position: absolute;
+      top: 50%;
+      margin-left: -3px;
+      top: 18px;
+      left: 45px;
+      width: 70%; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter div {
       z-index: 4; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter .disabled-input {
@@ -11593,18 +11602,6 @@ input:checked + .sliders:before {
     padding-top: 30px;
     padding-bottom: 30px;
     z-index: 2; }
-
-.not-line-div {
-  display: flex;
-  justify-content: center;
-  position: relative; }
-  .not-line-div::before {
-    content: "";
-    border-top: 2px solid #776fff;
-    position: absolute;
-    top: 14px;
-    left: -58px;
-    width: 66px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
