--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #6ae3e3; }
+  background: #445639; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #232582; }
+  background: #ec8aa8; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #d375a9; }
+  background: #b42d3a; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #eb8c01; }
+  background: #6fce5d; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7d4fbb; }
+  background: #528038; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d896a6; }
+  background: #7d4c56; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6b9df8; }
+  background: #c66936; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #3f5e35; }
+  background: #27c99d; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b61fc7; }
+  background: #31109c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e1071a; }
+  background: #966fb2; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8b1736; }
+  background: #32c9af; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #495ac7; }
+  background: #20111e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #9e5bef; }
+  background: #c2afd3; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e05c68; }
+  background: #b6d2d6; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #99c838; }
+  background: #7ce8d9; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c8540e; }
+  background: #3b634d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #a5e072; }
+  background: #e7fbd6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ae070e; }
+  background: #941f5f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #46d391; }
+  background: #6e874d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #ba869b; }
+  background: #fc5760; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0bfbe5; }
+  background: #80e04a; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #6595ab; }
+  background: #45efc4; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #3874d6; }
+  background: #33d48b; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #b64788; }
+  background: #be0912; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #7e171f; }
+  background: #06d41f; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7812b3; }
+  background: #5e675f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #1fc893; }
+  background: #47d7e4; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #f80d60; }
+  background: #4d0d34; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #d368c1; }
+  background: #619986; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #ca1cbf; }
+  background: #ef8fef; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #082ff1; }
+  background: #d2f226; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ad130d; }
+  background: #99c518; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d9b722; }
+  background: #aca25d; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #16179b; }
+  background: #3c23a0; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #705775; }
+  background: #695af7; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #4c331c; }
+  background: #fa9c48; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ce5b81; }
+  background: #da474e; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #039c2b; }
+  background: #761879; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #9bead1; }
+  background: #09bd8e; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #ba3661; }
+  background: #903a8e; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #04cd06; }
+  background: #2ca848; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #dd8436; }
+  background: #524627; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #6ca817; }
+  background: #c65bc0; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #0ce4c3; }
+  background: #bc4f8a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #323fb9; }
+  background: #dad21a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5b4bf3; }
+  background: #d4b68e; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d99b99; }
+  background: #3dabff; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ae9f28; }
+  background: #aabdc6; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a98bdd; }
+  background: #b74434; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #37d273; }
+  background: #fc524f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #cc78f2; }
+  background: #5fd7a5; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c07142; }
+  background: #bf565c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #c9bce9; }
+  background: #edf3e1; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #7dfc0d; }
+  background: #2af395; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #50a885; }
+  background: #5a8d51; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #6ae7f4; }
+  background: #840be3; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #aa808a; }
+  background: #c5b35e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ed3d21; }
+  background: #ae49dc; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #9c4b55; }
+  background: #142620; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #11755f; }
+  background: #80b398; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #1dae6b; }
+  background: #04178c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #158624; }
+  background: #2d9696; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #f37f84; }
+  background: #3226d5; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #dc6959; }
+  background: #de3a11; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #2a0f99; }
+  background: #971752; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #97488c; }
+  background: #390716; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #860c47; }
+  background: #dbaa23; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #ec7c54; }
+  background: #9c6de6; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #03067f; }
+  background: #dd49da; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #cd2b4f; }
+  background: #dd57f1; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #6b5467; }
+  background: #911c1a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b3a371; }
+  background: #a7c470; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #387ab7; }
+  background: #849287; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #bb4b31; }
+  background: #14baa2; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #d26c39; }
+  background: #f27c7f; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f7e64c; }
+  background: #0309ee; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #48b17e; }
+  background: #77fadd; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #3ed41c; }
+  background: #b3b6ed; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #0bc62f; }
+  background: #7e0579; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #404409; }
+  background: #de305b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #bd66bb; }
+  background: #2ff9a2; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #060bac; }
+  background: #88ff49; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #14bcd7; }
+  background: #d6f979; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2c1d24; }
+  background: #e0d00d; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #9059a1; }
+  background: #86aae1; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #92f83a; }
+  background: #f59819; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #b0e847; }
+  background: #a847d3; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8b74c7; }
+  background: #af182f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f0878d; }
+  background: #9ef02a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #c19e91; }
+  background: #fed427; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #878681; }
+  background: #ec1242; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #061777; }
+  background: #54ab6b; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #e79633; }
+  background: #0311a6; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #74557a; }
+  background: #841ddb; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #58a8ad; }
+  background: #72e75f; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #fa5083; }
+  background: #96b9e3; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #3e5ae5; }
+  background: #2c1d2a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c09703; }
+  background: #bfa1c2; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6b7ff8; }
+  background: #75b680; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #9142ca; }
+  background: #7aaf8f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11461,7 +11461,8 @@ input:checked + .sliders:before {
   display: flex !important;
   justify-content: space-between !important;
   align-items: center !important;
-  margin-bottom: 43px; }
+  margin-bottom: 43px;
+  z-index: 2; }
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
     margin-left: 10px !important;
     margin-right: 10px !important;
@@ -11472,10 +11473,10 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn::after {
       content: "";
       width: 0;
-      height: 55px;
+      height: 68px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -60px;
+      top: -75px;
       left: 38px; }
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a {
       color: #000000;
@@ -11494,15 +11495,6 @@ input:checked + .sliders:before {
     display: flex !important;
     justify-content: space-between !important;
     align-items: center !important; }
-    .query-wizard-exp-contents .query-wizard-expension .fields-wrappter::before {
-      content: "";
-      border-top: 2px solid #776fff;
-      position: absolute;
-      top: 50%;
-      margin-left: -3px;
-      top: 18px;
-      left: 45px;
-      width: 70%; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter div {
       z-index: 4; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter .disabled-input {
@@ -11516,23 +11508,14 @@ input:checked + .sliders:before {
     display: flex !important;
     justify-content: space-between !important;
     align-items: center !important; }
-    .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter::before {
-      content: "";
-      border-top: 2px solid #776fff;
-      position: absolute;
-      top: 50%;
-      margin-left: -3px;
-      top: 18px;
-      left: 23px;
-      width: 80%; }
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter::after {
       content: "";
       width: 0;
-      height: 62px;
+      height: 96px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -59px;
-      left: 42px; }
+      top: -76px;
+      left: 41px; }
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter div {
       z-index: 2; }
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter .disabled-input {
@@ -11602,6 +11585,82 @@ input:checked + .sliders:before {
     padding-top: 30px;
     padding-bottom: 30px;
     z-index: 2; }
+
+.v-line-div .v-line-space {
+  position: relative; }
+  .v-line-div .v-line-space::before {
+    content: "";
+    position: absolute;
+    background: #776fff;
+    z-index: -1; }
+
+.horizontal .v-line-space::before {
+  top: 0.9em;
+  left: -25px;
+  width: 4em;
+  height: 0.15em; }
+
+.list-ic {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.list-ic a {
+  color: #788288;
+  text-decoration: none; }
+
+.list-ic li {
+  position: relative; }
+
+.list-ic li span {
+  position: relative; }
+
+.list-ic li::before {
+  content: "";
+  position: absolute;
+  background: #776fff;
+  z-index: -1; }
+
+.list-ic.horizontal li {
+  display: inline-block; }
+
+.list-ic.horizontal li span {
+  margin: 0 1px; }
+
+.list-ic.horizontal li::before {
+  top: 50%;
+  left: -49px;
+  width: 7em;
+  height: 0.13em; }
+
+.list-ic.vertical {
+  padding: 0;
+  margin: 0; }
+
+.list-ic.vertical li {
+  list-style-type: none;
+  text-align: left; }
+
+.list-ic.vertical li span {
+  margin: 1.4em 0; }
+
+.list-ic.vertical li::before {
+  top: -35px;
+  left: 13px;
+  width: 0.2em;
+  height: 4em; }
+
+.list-ic li:first-child::before {
+  display: none; }
+
+.list-ic .active {
+  background: dodgerblue; }
+
+.list-ic .active ~ li {
+  background: lightblue; }
+
+.list-ic .active ~ li::before {
+  background: lightblue; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
