--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -912,6 +912,7 @@ input:checked + .sliders:before {
   justify-content: space-between !important;
   align-items: center !important;
   margin-bottom: 43px;
+  z-index: 2;
 
   .dropdown-with-img {
     margin-left: 10px !important;
@@ -926,10 +927,10 @@ input:checked + .sliders:before {
     &::after {
       content: "";
       width: 0;
-      height: 55px;
+      height: 68px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -60px;
+      top: -75px;
       left: 38px;
     }
 
@@ -958,16 +959,16 @@ input:checked + .sliders:before {
     justify-content: space-between !important;
     align-items: center !important;
 
-    &::before {
-      content: "";
-      border-top: 2px solid #776fff;
-      position: absolute;
-      top: 50%;
-      margin-left: -3px;
-      top: 18px;
-      left: 45px;
-      width: 70%;
-    }
+    // &::before {
+    //   content: "";
+    //   border-top: 2px solid #776fff;
+    //   position: absolute;
+    //   top: 50%;
+    //   margin-left: -3px;
+    //   top: 18px;
+    //   left: 45px;
+    //   width: 70%;
+    // }
 
     div {
       z-index: 4;
@@ -988,25 +989,25 @@ input:checked + .sliders:before {
     justify-content: space-between !important;
     align-items: center !important;
 
-    &::before {
-      content: "";
-      border-top: 2px solid #776fff;
-      position: absolute;
-      top: 50%;
-      margin-left: -3px;
-      top: 18px;
-      left: 23px;
-      width: 80%;
-    }
+    // &::before {
+    //   content: "";
+    //   border-top: 2px solid #776fff;
+    //   position: absolute;
+    //   top: 50%;
+    //   margin-left: -3px;
+    //   top: 18px;
+    //   left: 23px;
+    //   width: 80%;
+    // }
 
     &::after {
       content: "";
       width: 0;
-      height: 62px;
+      height: 96px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -59px;
-      left: 42px;
+      top: -76px;
+      left: 41px;
     }
 
     div {
@@ -1109,18 +1110,102 @@ input:checked + .sliders:before {
   }
 }
 
-// .not-line-div {
-//   display: flex;
-//   justify-content: center;
-//   position: relative;
+.v-line-div .v-line-space {
+  position: relative;
 
-//   &::before {
-//     content: "";
-//     border-top: 2px solid #776fff;
-//     position: absolute;
-//     top: 14px;
-//     left: -58px;
-//     width: 66px;
+  &::before {
+    content: "";
+    position: absolute;
+    background: #776fff;
+    z-index: -1;
+  }
 
-//   }
-// }
+  // &::before {
+  //   content: "";
+  //   border-top: 2px solid #776fff;
+  //   position: absolute;
+  //   top: 50%;
+  //   left: -58px;
+  //   width: 80px;
+  //   z-index: -1;
+  // }
+}
+
+.horizontal .v-line-space::before {
+  top: 0.9em;
+  left: -25px;
+  width: 4em;
+  height: 0.15em;
+}
+
+.list-ic {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.list-ic a {
+  color: #788288;
+  text-decoration: none;
+}
+.list-ic li {
+  position: relative;
+}
+.list-ic li span {
+  // display: inline-block;
+  // font-weight: 800;
+  // width: 2em;
+  // height: 2em;
+  // text-align: center;
+  // line-height: 2em;
+  // border-radius: 1em;
+  // background: #18bc9c;
+  // color: white;
+  position: relative;
+}
+.list-ic li::before {
+  content: "";
+  position: absolute;
+  background: #776fff;
+  z-index: -1;
+}
+.list-ic.horizontal li {
+  display: inline-block;
+}
+.list-ic.horizontal li span {
+  margin: 0 1px;
+}
+.list-ic.horizontal li::before {
+  top: 50%;
+  left: -49px;
+  width: 7em;
+  height: 0.13em;
+}
+.list-ic.vertical {
+  padding: 0;
+  margin: 0;
+}
+.list-ic.vertical li {
+  list-style-type: none;
+  text-align: left;
+}
+.list-ic.vertical li span {
+  margin: 1.4em 0;
+}
+.list-ic.vertical li::before {
+  top: -35px;
+  left: 13px;
+  width: 0.2em;
+  height: 4em;
+}
+.list-ic li:first-child::before {
+  display: none;
+}
+.list-ic .active {
+  background: dodgerblue;
+}
+.list-ic .active ~ li {
+  background: lightblue;
+}
+.list-ic .active ~ li::before {
+  background: lightblue;
+}
