--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #445639; }
+  background: #35f8ab; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #ec8aa8; }
+  background: #fd99c5; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b42d3a; }
+  background: #5d81cf; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #6fce5d; }
+  background: #2d77e9; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #528038; }
+  background: #a49001; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7d4c56; }
+  background: #0ecc74; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c66936; }
+  background: #a97f1e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #27c99d; }
+  background: #1b40c1; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #31109c; }
+  background: #32f946; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #966fb2; }
+  background: #cfcf44; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #32c9af; }
+  background: #f9bc1a; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #20111e; }
+  background: #13ace0; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c2afd3; }
+  background: #0d566a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #b6d2d6; }
+  background: #0e88e1; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #7ce8d9; }
+  background: #79c3fe; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3b634d; }
+  background: #6ae3b9; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #e7fbd6; }
+  background: #2ab50f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #941f5f; }
+  background: #cdf2a8; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #6e874d; }
+  background: #65583c; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #fc5760; }
+  background: #1f3254; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #80e04a; }
+  background: #b41e53; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #45efc4; }
+  background: #16feef; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #33d48b; }
+  background: #48fa87; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #be0912; }
+  background: #47abfb; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #06d41f; }
+  background: #28e4eb; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #5e675f; }
+  background: #54f346; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #47d7e4; }
+  background: #57ba50; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #4d0d34; }
+  background: #ec5141; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #619986; }
+  background: #4d3afe; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #ef8fef; }
+  background: #c1eb05; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d2f226; }
+  background: #4c63ad; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #99c518; }
+  background: #0a817c; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #aca25d; }
+  background: #88e410; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #3c23a0; }
+  background: #0f4457; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #695af7; }
+  background: #6a9b86; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #fa9c48; }
+  background: #163b37; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #da474e; }
+  background: #c8b4f6; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #761879; }
+  background: #206e30; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #09bd8e; }
+  background: #d2d15f; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #903a8e; }
+  background: #c02b6c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #2ca848; }
+  background: #e4e98f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #524627; }
+  background: #4d501d; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c65bc0; }
+  background: #578090; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #bc4f8a; }
+  background: #5b7c9b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #dad21a; }
+  background: #9b5d2e; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d4b68e; }
+  background: #83e5ad; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #3dabff; }
+  background: #b26d54; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #aabdc6; }
+  background: #18330d; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b74434; }
+  background: #515264; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #fc524f; }
+  background: #e7ec04; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #5fd7a5; }
+  background: #b97abd; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #bf565c; }
+  background: #b575e2; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #edf3e1; }
+  background: #ad95cd; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #2af395; }
+  background: #a8c885; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5a8d51; }
+  background: #53d741; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #840be3; }
+  background: #62d3a6; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c5b35e; }
+  background: #09ca8d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ae49dc; }
+  background: #4c364c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #142620; }
+  background: #470612; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #80b398; }
+  background: #950d1b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #04178c; }
+  background: #6cfc97; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #2d9696; }
+  background: #55f434; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #3226d5; }
+  background: #932272; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #de3a11; }
+  background: #d0e2c4; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #971752; }
+  background: #e0737e; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #390716; }
+  background: #114f36; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #dbaa23; }
+  background: #90765e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9c6de6; }
+  background: #9a5d2e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #dd49da; }
+  background: #db75eb; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #dd57f1; }
+  background: #7e6213; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #911c1a; }
+  background: #6234c9; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #a7c470; }
+  background: #c9fa51; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #849287; }
+  background: #9078a9; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #14baa2; }
+  background: #d964d6; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #f27c7f; }
+  background: #f60b14; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #0309ee; }
+  background: #c87747; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #77fadd; }
+  background: #d1434a; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #b3b6ed; }
+  background: #bc42fe; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7e0579; }
+  background: #99f33d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #de305b; }
+  background: #4c13cf; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #2ff9a2; }
+  background: #d51a3e; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #88ff49; }
+  background: #653320; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #d6f979; }
+  background: #19b0f4; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #e0d00d; }
+  background: #1cff86; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #86aae1; }
+  background: #51e305; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #f59819; }
+  background: #41f58d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a847d3; }
+  background: #d0f09d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #af182f; }
+  background: #0f052f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #9ef02a; }
+  background: #5df631; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #fed427; }
+  background: #3752e0; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #ec1242; }
+  background: #108d03; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #54ab6b; }
+  background: #a6b485; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #0311a6; }
+  background: #11689f; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #841ddb; }
+  background: #b378d5; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #72e75f; }
+  background: #b56a9b; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #96b9e3; }
+  background: #d809c5; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #2c1d2a; }
+  background: #adf107; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #bfa1c2; }
+  background: #46e570; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #75b680; }
+  background: #d6bd8c; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #7aaf8f; }
+  background: #9eff8a; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11315,15 +11315,11 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-logo {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-name {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -11503,7 +11499,8 @@ input:checked + .sliders:before {
       padding: 8px 10px;
       font-size: 12px;
       color: #fff;
-      border-radius: 25px; }
+      border-radius: 25px;
+      cursor: pointer; }
   .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter {
     display: flex !important;
     justify-content: space-between !important;
@@ -11524,7 +11521,8 @@ input:checked + .sliders:before {
       padding: 8px 10px;
       font-size: 12px;
       color: #776fff;
-      border-radius: 25px; }
+      border-radius: 25px;
+      cursor: pointer; }
 
 .query-wizard-div-box {
   margin-left: 10px !important;
@@ -11547,7 +11545,8 @@ input:checked + .sliders:before {
   padding: 8px 2px 8px 8px;
   color: #fff;
   border-radius: 25px;
-  font-size: 12px; }
+  font-size: 12px;
+  cursor: pointer; }
   .togleBtn span {
     background: #fff;
     border: 2px solid #fff;
@@ -11561,7 +11560,8 @@ input:checked + .sliders:before {
   padding: 8px 8px 8px 2px;
   color: #fff;
   border-radius: 25px;
-  font-size: 12px; }
+  font-size: 12px;
+  cursor: pointer; }
   .togleBtnDisable span {
     background: #fff;
     border: 2px solid #fff;
