img dropdown css fixed

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #35f8ab; }
+  background: #e7c07e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #fd99c5; }
+  background: #34506e; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #5d81cf; }
+  background: #5c71c6; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #2d77e9; }
+  background: #8cfcce; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a49001; }
+  background: #a58044; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #0ecc74; }
+  background: #1d6386; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a97f1e; }
+  background: #a01c58; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #1b40c1; }
+  background: #a9456a; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #32f946; }
+  background: #b80b0d; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #cfcf44; }
+  background: #d85d2e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f9bc1a; }
+  background: #ccc5a1; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #13ace0; }
+  background: #d2a579; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #0d566a; }
+  background: #e00b04; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0e88e1; }
+  background: #30d769; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #79c3fe; }
+  background: #53a7b4; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #6ae3b9; }
+  background: #f0fa87; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #2ab50f; }
+  background: #8697b6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #cdf2a8; }
+  background: #d3c041; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #65583c; }
+  background: #b9b0c5; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #1f3254; }
+  background: #d75ec1; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #b41e53; }
+  background: #271a67; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #16feef; }
+  background: #340a48; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #48fa87; }
+  background: #1339f0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #47abfb; }
+  background: #a6d5a9; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #28e4eb; }
+  background: #37e996; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #54f346; }
+  background: #f54176; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #57ba50; }
+  background: #5b2c65; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #ec5141; }
+  background: #bdc062; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #4d3afe; }
+  background: #895735; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #c1eb05; }
+  background: #85e36a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #4c63ad; }
+  background: #4ceddc; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #0a817c; }
+  background: #aa59aa; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #88e410; }
+  background: #2d63ea; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #0f4457; }
+  background: #0933df; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #6a9b86; }
+  background: #f0cc69; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #163b37; }
+  background: #2b35ee; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #c8b4f6; }
+  background: #ab3966; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #206e30; }
+  background: #ff7216; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #d2d15f; }
+  background: #b7a64d; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c02b6c; }
+  background: #c861e0; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #e4e98f; }
+  background: #81bc22; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #4d501d; }
+  background: #8e8457; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #578090; }
+  background: #f0a30d; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #5b7c9b; }
+  background: #9e02ea; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9b5d2e; }
+  background: #222191; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #83e5ad; }
+  background: #3388fc; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b26d54; }
+  background: #95594f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #18330d; }
+  background: #84f342; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #515264; }
+  background: #047996; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #e7ec04; }
+  background: #35e7e7; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #b97abd; }
+  background: #13fd3e; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b575e2; }
+  background: #437979; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ad95cd; }
+  background: #aeb360; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a8c885; }
+  background: #3dde2d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #53d741; }
+  background: #8a81cf; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #62d3a6; }
+  background: #5c3cf7; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #09ca8d; }
+  background: #f791de; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #4c364c; }
+  background: #786515; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #470612; }
+  background: #fa29bc; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #950d1b; }
+  background: #c3b074; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #6cfc97; }
+  background: #9b9805; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #55f434; }
+  background: #926b71; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #932272; }
+  background: #e80951; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #d0e2c4; }
+  background: #8b5bed; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #e0737e; }
+  background: #1ff350; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #114f36; }
+  background: #0860f2; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #90765e; }
+  background: #ed28e4; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9a5d2e; }
+  background: #9027d5; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #db75eb; }
+  background: #aad127; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #7e6213; }
+  background: #76508d; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #6234c9; }
+  background: #267ccc; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c9fa51; }
+  background: #7933f0; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #9078a9; }
+  background: #075396; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d964d6; }
+  background: #b2f464; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #f60b14; }
+  background: #03ae39; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #c87747; }
+  background: #e9edbe; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d1434a; }
+  background: #43dfa5; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #bc42fe; }
+  background: #c43cc0; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #99f33d; }
+  background: #c5bd5b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #4c13cf; }
+  background: #d08d1e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #d51a3e; }
+  background: #f1465e; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #653320; }
+  background: #cdcf03; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #19b0f4; }
+  background: #dd574c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #1cff86; }
+  background: #49601b; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #51e305; }
+  background: #99e45e; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #41f58d; }
+  background: #bee197; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #d0f09d; }
+  background: #ee9223; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #0f052f; }
+  background: #e9b6ac; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #5df631; }
+  background: #ee9c4b; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #3752e0; }
+  background: #d28d31; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #108d03; }
+  background: #286709; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a6b485; }
+  background: #8be78a; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #11689f; }
+  background: #1fbb2a; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #b378d5; }
+  background: #96d566; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #b56a9b; }
+  background: #dc02fc; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d809c5; }
+  background: #485ef1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #adf107; }
+  background: #5c74ad; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #46e570; }
+  background: #46ab4d; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #d6bd8c; }
+  background: #926010; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #9eff8a; }
+  background: #0fa3d9; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11463,6 +11463,8 @@ input:checked + .sliders:before {
     margin-left: 10px !important;
     margin-right: 10px !important;
     padding: 0px; }
+  .query-wizard-exp-contents .query-wizard-expension .dropdown-with-logos li::before {
+    display: none !important; }
   .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn {
     position: relative;
     padding-left: 18px; }
